corrected image distortion and added user name and title

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,8 +23,24 @@
  *
  * */
 
-.user-image-thumbnail{
+.user-image-thumbnail-wrapper{
 	height:70px;
 	width:70px;
 	margin-top:5px;
+	overflow:hidden;
+	float:right;
+	clear:both;
+}
+
+.user-image-thumbnail{
+	width:inherit;
+}
+
+.user-name-nav{
+	float:right;
+	clear:both;
+}
+.user-title-nav{
+	float:right;
+	clear:both;
 }
